Finish MySQL and PostgreSQL pages

--- a/frontend/MySQL/MySQL.html
+++ b/frontend/MySQL/MySQL.html
@@ -3,15 +3,15 @@
 
 <head>
 	<meta charset="UTF-8">
-    <link rel="stylesheet" href="../index/index.css">
+    <link rel="stylesheet" href="../MySQL/MySQL.css">
 	<link rel="stylesheet" href="../sidebar/sidebar-handler.css">
-	<title> Index </title>
+	<title> MySQL </title>
 </head>
 
 <body>
     <div class="row">
 
-        <h1 style="text-align: center; text-shadow: 2px 2px 1px #00000027;"><br>PostgreSQL</h1>
+        <h1 style="text-align: center; text-shadow: 2px 2px 1px #00000027;"><br>MySQL</h1>
         <div class="column left">
 	        <object id="sidebar" data="../sidebar/sidebar.html"></object>
         </div>
@@ -23,8 +23,8 @@
                 <div>
                     <form id="form" autocomplete="on">
                         <fieldset>
-                            <h2 class="formTitle">UI para alterar o Banco de Dados <em>"test"</em></h2>
-                            <h3 class="formSubtitle">Preencha os campos abaixo para inserir (<em>submit</em>), alterar (<em>patch</em>) ou deletar (<em>delete</em>) o dado do banco de dados <em>"test"</em>.</h3>
+                            <h2 class="formTitle">UI para alterar o Banco de Dados <em>"user"</em></h2>
+                            <h3 class="formSubtitle">Preencha os campos abaixo para inserir (<em>submit</em>), alterar (<em>patch</em>) ou deletar (<em>delete</em>) o dado do banco de dados <em>"user"</em>.</h3>
                             <label for="fname">Name</label><br>
                                 <input type="text" id="fname" name="fname" placeholder="Nome" autocomplete="on">
                             <br><br>
@@ -55,7 +55,7 @@
     
     <script src="../public/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="../public/ext-language_tools.js"></script>
-    <script src="../index/index.js"></script>
+    <script src="../MySQL/MySQL.js"></script>
     <script src="../sidebar/sidebar-handler.js"></script>
     
 </body>
