--- a/frontend/sidebar/sidebar.html
+++ b/frontend/sidebar/sidebar.html
@@ -3,7 +3,6 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="sidebar.css">
 	<title> Sidebar </title>
 </head>
@@ -11,23 +10,23 @@
 <body>
     <div id="mySidebar" class="sidebar">
         <a href="../index/index.html" target="_parent">
-            <i class="material-icons">info</i>
-            <span class="icon-text">about</span>
+            <img class="dbIcon" src="../public/home.png" alt="Index icon" class="icon">
+            <span class="icon-text">Início</span>
         </a>
         <br>
-        <a href="../page1/page1.html" target="_parent">
-            <i class="material-icons">spa</i>
-            <span class="icon-text">services</span>
+        <a href="../MySQL/MySQL.html" target="_parent">
+            <img class="dbIcon" src="../public/mysql.png" alt="MySQL icon" class="icon">
+            <span class="icon-text">MySQL</span>
         </a>
         <br>
-        <a href="../page2/page2.html" target="_parent">
-            <i class="material-icons">monetization_on</i>
-            <span class="icon-text">clients</span>
+        <a href="../PostgreSQL/PostgreSQL.html" target="_parent">
+            <img class="dbIcon" src="../public/postgre.png" alt="PostgreSQL icon" class="icon">
+            <span class="icon-text">PostgreSQL</span>
         </a>
         <br>
         <a href="./sidebar-handler.css" target="_parent">
-            <i class="material-icons">email</i>
-            <span class="icon-text">contact<span>
+            <img class="dbIcon" src="../public/info.png" alt="Info icon" class="icon">
+            <span class="icon-text">Sobre</span>
         </a>
     </div>
 
