--- a/frontend/PostgreSQL/PostgreSQL.html
+++ b/frontend/PostgreSQL/PostgreSQL.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="UTF-8">
-    <link rel="stylesheet" href="../index/index.css">
+    <link rel="stylesheet" href="../PostgreSQL/PostgreSQL.css">
 	<link rel="stylesheet" href="../sidebar/sidebar-handler.css">
-	<title> Index </title>
+	<title> PostgreSQL </title>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
     
     <script src="../public/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="../public/ext-language_tools.js"></script>
-    <script src="../index/index.js"></script>
+    <script src="../PostgreSQL/PostgreSQL.js"></script>
     <script src="../sidebar/sidebar-handler.js"></script>
     
 </body>
