Reorganize public files and adjust paths

--- a/frontend/sidebar/sidebar.html
+++ b/frontend/sidebar/sidebar.html
@@ -10,22 +10,22 @@
 <body>
     <div id="mySidebar" class="sidebar">
         <a href="../index/index.html" target="_parent">
-            <img class="dbIcon" src="../public/home.png" alt="Index icon" class="icon">
+            <img class="dbIcon" src="../public/images/home.png" alt="Index icon" class="icon">
             <span class="icon-text">Início</span>
         </a>
         <br>
         <a href="../MySQL/MySQL.html" target="_parent">
-            <img class="dbIcon" src="../public/mysql.png" alt="MySQL icon" class="icon">
+            <img class="dbIcon" src="../public/images/mysql.png" alt="MySQL icon" class="icon">
             <span class="icon-text">MySQL</span>
         </a>
         <br>
         <a href="../PostgreSQL/PostgreSQL.html" target="_parent">
-            <img class="dbIcon" src="../public/postgre.png" alt="PostgreSQL icon" class="icon">
+            <img class="dbIcon" src="../public/images/postgre.png" alt="PostgreSQL icon" class="icon">
             <span class="icon-text">PostgreSQL</span>
         </a>
         <br>
-        <a href="./sidebar-handler.css" target="_parent">
-            <img class="dbIcon" src="../public/info.png" alt="Info icon" class="icon">
+        <a href="../info/info.html" target="_parent">
+            <img class="dbIcon" src="../public/images/info.png" alt="Info icon" class="icon">
             <span class="icon-text">Sobre</span>
         </a>
     </div>
