Fix index guide text

--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -37,7 +37,7 @@
                     <br>
                     <li>Clique no item do SGDB que desejar: <em>MySQL</em> ou <em>PostgreSQL</em>.<br>Caso queira mais informações sobre o projeto de TCC como um todo clique em <em>Sobre</em>.</li>
                     <br>
-                    <li>Ao abrir a nova página, escreva seu código SQL na caixa de texto e clique no botão <em>Executar Query</em> embaixo da própria caixa de texto, o resultado será mostrado abaixo desse botão.<br>Para limpar o resultado devolvido clique no botão <em>Limpar Resultado</em>.</li>
+                    <li>Ao abrir a nova página, escreva seu código SQL na caixa de texto e clique no botão <em>Executar Query</em> embaixo da própria caixa de texto, o resultado será mostrado abaixo desse botão.<br>Para limpar o resultado devolvido clique no botão <em>Limpar Resultado</em>.<br><strong>Importante:</strong> Só pode ser executado um código SQL por vez (o código em si pode ter várias linhas).</li>
                     <br>
                     <li>Caso queira utilizar a UI gráfica, ela se localiza na caixa à direita da caixa de texto.<br>Para usá-la, basta preencher o formulário e clicar no botão <em>Submit</em> para inserir os dados, <em>Patch</em> para alterar os dados ou <em>Delete</em> para excluir os dados.<br>Clicando em <em>GetDB</em> o banco de dados inteiro será exibido no campo de resultados abaixo do botão <em>Executar Query</em>.</li>
                     <br>
